--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="right">
             <div class="fullQr"></div>
-            <img src="./image/bg.png" alt="">
+            <img src="./image/bg1.png" alt="">
             <div class="smallQr"></div>
         </div>
     </div>
